<resources>
    <string name="app_name">Mercado</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="titulo">Mercado</string>
    <string name="btn_frutas">Frutas</string>
    <string name="btn_minha_lista">Minha Lista</string>
    <string name="btn_pedido">Pedido</string>
    <string name="subtitulo">Das Frutas</string>
    <string name="abacate">Abacate</string>
    <string name="abacaxi">Abacaxi</string>
    <string name="acerola">Acerola</string>
    <string name="amora">Amora</string>
    <string name="banana">Banana</string>
    <string name="caju">Caju</string>
    <string name="caqui">Caqui</string>
    <string name="preco">Preço</string>
    <string name="comprar">Comprar</string>
    <string name="subtotal">Subtotal : </string>
    <string name="valor">0.00</string>
    <string name="frete">Frete :</string>
    <string name="aPagar">A Pagar :</string>
    <string name="total">Total :</string>
    <string name="preco_abacate">8.50</string>
    <string name="simbolo">R$</string>
    <string name="fruta">Fruta</string>
    <string name="quantidade">Qtd</string>
    <string name="sinal">-</string>
    <string name="numero">0</string>
    <string name="frutas">Frutas</string>
    <string name="pedidos">Pedidos</string>
    <string name="minha_lista">Minha Lista</string>
    <string name="selecione">Selecione uma Fruta</string>
    <string name="Item" >Informe o Id do Item Abaixo</string>
    <string name="item_id">Item</string>
    <string name="nome_fruta">Nome</string>
    <string name="Pesquisar" >Pesquisar</string>
    <string name="text_id">Id</string>
    <string name="titulo_excluir">Excluir</string>
    <string name="mensagem">Mensagem</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancelar">Cancelar</string>
</resources>
