<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".InicioActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorHeader"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/varela_round" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/subtitulo"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/varela_round" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHeader"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorHeader"
            android:onClick="onClickFrutasInicio"
            android:text="@string/btn_frutas"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorHeader"
            android:onClick="onClickMinhaListaInicio"
            android:text="@string/btn_minha_lista"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorHeader"
            android:onClick="onClickPedidoInicio"
            android:text="@string/btn_pedido"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imagemFrutasInicio"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="2.5dp"
            app:srcCompat="@drawable/imagem" />

        <TextView
            android:id="@+id/text_fruta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/fruta"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textStyle="bold"
            android:maxLines="1"
            android:singleLine="true"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/text_preco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/valor"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editQtd"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/quantidade"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:onClick="onCompra"
            android:padding="10dp"
            app:srcCompat="@drawable/carrinho" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/selecione"
            android:textColor="@color/colorHeader"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/varela_round" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="216dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reciclerFrutas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>