<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MinhaListaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorHeader"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/varela_round" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/subtitulo"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/varela_round" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHeader"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorHeader"
            android:onClick="onFrutasCompras"
            android:text="@string/btn_frutas"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorHeader"
            android:onClick="onMinhaListaCompras"
            android:text="@string/btn_minha_lista"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorHeader"
            android:onClick="onMeusPedidosCompras"
            android:text="@string/btn_pedido"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minha_lista"
            android:textColor="@color/colorHeader"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/varela_round" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerMinhaLista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/numeros_fundo"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>