<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imagemFrutas"
            android:layout_width="170dp"
            android:layout_height="110dp"
            android:padding="10dp"
            app:srcCompat="@drawable/abacate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="fill_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textFruta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:text="@string/abacate"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/varela_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingLeft="5dp"
                    android:text="@string/simbolo"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/varela_round" />

                <TextView
                    android:id="@+id/textPreco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingLeft="5dp"
                    android:text="@string/valor"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/varela_round" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>