<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/colorCaixaCinza"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textQtdss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/numeros_fundo2"
                android:gravity="center_horizontal|center_vertical"
                android:padding="5dp"
                android:text="@string/numero"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textFrutaPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/abacate"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="@font/varela_round"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView15"
                app:layout_constraintStart_toEndOf="@+id/textQtdss"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/simbolo"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="@font/varela_round"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textPrecoPedido"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textPrecoPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/valor"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="@font/varela_round"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="151dp" />

            <TextView
                android:id="@+id/textId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textColor="@color/colorCaixaCinza"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>